skan_tests/error/ErrorMismatchreturn.sk

bool main() {
    return 1;
}

